Add mods, disabled nether and end portals
- Simple discord rich presence
- Dynamic Surroundings
- Elenai Dodge 2
- In Control
- FX Control
- NetherCraft
- Sound Filters
- Total Darkness
- Eyes in the Darkness

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ usernamecache.json
 /screenshots
 knownkeys.txt
 mods/OptiFine_1.16.5_HD_U_G7.jar
+/crash-reports
+optionsof.txt
+optionsshaders.txt
+/shaderpacks
