--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -4,3 +4,8 @@ Mining World
 The Undergarden
 Time's up
 Vanilla Stacked Dimensions - Warden Edition
+FastFurnace
+FastWorkbench
+Nethercraft
+Elenai Dodge 2
+Eyes in the Darkness
