--- a/config/dsurround/sndctrl-client.toml
+++ b/config/dsurround/sndctrl-client.toml
@@ -14,7 +14,7 @@
 	#Options to configure sounds on an individual basis
 	"Individual Sound Config" = ["minecraft:entity.sheep.ambient cull", "minecraft:entity.chicken.ambient cull", "minecraft:entity.cow.ambient cull", "minecraft:entity.pig.ambient cull", "minecraft:entity.llama.ambient cull", "minecraft:entity.wither.spawn cull 10", "minecraft:entity.wither.death cull 10", "minecraft:entity.dragon.spawn cull 10", "minecraft:entity.dragon.death cull 10"]
 	#Possible sounds to play when client reaches main game menu
-	"Startup Sound List" = ["undergarden:entity.gloomper_living", "eyesinthedarkness:mob.eyes.laugh", "minecraft:entity.piglin.converted_to_zombified", "environs:insectcrawl", "stacked_dimensions_warden:block.sculk_trap"]
+	"Startup Sound List" = ["minecraft:entity.player.levelup"]
 	#Ticks between culled sound events (0 to disable culling)
 	#Range: 0 ~ 6000
 	"Sound Culling Interval" = 20
