--- a/config/alexsmobs.toml
+++ b/config/alexsmobs.toml
@@ -1,14 +1,14 @@
 
 [general]
 	#Whether all players should get an Animal Dictionary when joining the world for the first time.
-	giveBookOnStartup = true
+	giveBookOnStartup = false
 	#Lava Opacity for the Lava Vision Potion.
 	#Range: 0.01 ~ 1.0
 	lavaVisionOpacity = 0.65
 	#Whether to disable certain aspects of the Lava Vision Potion. Enable if issues with shaders persist.
 	shadersCompat = false
 	#Whether bananas should drop from blocks tagged with #alexsmobs:drops_bananas
-	bananasDropFromLeaves = true
+	bananasDropFromLeaves = false
 	#1 out of this number chance for leaves to drop a banana when broken. Fortune is automatically factored in
 	#Range: > 0
 	bananaChance = 200
@@ -19,7 +19,7 @@
 	#Whether polar bears should target seal mobs.
 	polarBearsAttackSeals = true
 	#Whether lava can be bottled with a right click of a glass bottle.
-	lavaBottleEnabled = true
+	lavaBottleEnabled = false
 	#Whether bone serpents are neutral or hostile.
 	neutralBoneSerpents = false
 	#Maximum world y-level that cave centipedes can spawn at
@@ -50,7 +50,7 @@
 	#List of all mungus mushrooms, biome transformations and surface blocks. Each is seperated by a |. Add an entry with a block registry name, biome registry name, and block registry name(for the ground).
 	mungusBiomeMatches = ["minecraft:red_mushroom|minecraft:mushroom_fields|minecraft:mycelium", "minecraft:brown_mushroom|minecraft:mushroom_fields|minecraft:mycelium", "minecraft:crimson_fungus|minecraft:crimson_forest|minecraft:crimson_nylium", "minecraft:warped_fungus|minecraft:warped_forest|minecraft:warped_nylium"]
 	#Whether guster spawns are limited to when it is raining/thundering.
-	limitGusterSpawnsToWeather = true
+	limitGusterSpawnsToWeather = false
 	#Whether Crimson Mosquitoes can transform into Warped Moscos if attacking a Mungus or any listed creature.
 	warpedMoscoTransformation = true
 	#List of extra(non mungus) mobs that will trigger a crimson mosquito to become a warped mosquito. Ex: "minecraft:mooshroom", "alexsmobs:warped_toad"
@@ -61,7 +61,7 @@
 	emuTargetSkeletons = true
 	#Percent chance for emu leggings to dodge projectile attacks.
 	#Range: 0.0 ~ 1.0
-	emuPantsDodgeChance = 0.45
+	emuPantsDodgeChance = 0.25
 
 	[general.spawning]
 		#Spawn Weight, added to a pool of other mobs for each biome. Higher number = higher chance of spawning. 0 = disable spawn
