--- a/config/bettercaves-1_16.toml
+++ b/config/bettercaves-1_16.toml
@@ -5,7 +5,7 @@
 	# Entries must have the mod namespace included.
 	# For example: "[minecraft:overworld, minecraft:the_nether, rats:ratlantis]"
 	# Default: "[minecraft:overworld]"
-	"Whitelisted Dimensions" = "[minecraft:overworld]"
+	"Whitelisted Dimensions" = "[minecraft:overworld, stacked_dimensions_warden:deeper_dark, mining_dimension:mining]"
 	# Automatically enables Better Caves in every possible dimension.
 	#     If this is enabled, the Whitelisted Dimension IDs option is ignored.
 	# Default: false
