--- a/config/treechop-client.toml
+++ b/config/treechop-client.toml
@@ -7,14 +7,30 @@
 	#Default setting for the effect that sneaking has on chopping (can be cycled in-game)
 	#Allowed Values: NONE, INVERT_CHOPPING, INVERT_FELLING
 	sneakBehavior = "INVERT_CHOPPING"
-	#Whether to ignore trees without connected leaves
-	onlyBreakTreesWithLeaves = false
 	#Whether to enable chopping when in creative mode (even when false, sneaking can still enable chopping)
 	chopInCreativeMode = false
+	#Whether to ignore trees without connected leaves
+	treesMustHaveLeaves = true
 
 [visuals]
 	#Whether to use procedural chopped log models; disable to use models added by a resource pack
 	useProceduralChoppedModels = true
 	#Whether to replace the interior sides of logs with a chopped texture instead of bark
 	removeBarkOnInteriorLogs = true
+
+	[visuals.choppingIndicator]
+		#Whether to show an on-screen icon indicating whether targeted blocks can be chopped
+		enabled = true
+		#Horizontal location of the indicator relative to the player's crosshairs; positive values move the indicator to the right
+		#Range: -256 ~ 256
+		xOffset = 16
+		#Vertical location of the indicator relative to the player's crosshairs; positive values move the indicator down
+		#Range: -256 ~ 256
+		yOffset = 0
+
+[settingsScreen]
+	#Whether to show in-game options for enabling and disable felling
+	showFellingOptions = false
+	#Whether to show chat confirmations when using hotkeys to change chop settings
+	showFeedbackMessages = true
 
