--- a/config/betterhud.cfg
+++ b/config/betterhud.cfg
@@ -76,7 +76,7 @@ biome {
     D:color.blue=255.0
     D:color.green=255.0
     D:color.red=255.0
-    B:enabled=true
+    B:enabled=false
     S:position.alignment=NORTH_WEST
     S:position.anchor=NORTH_WEST
     S:position.contentAlignment=null
@@ -94,7 +94,7 @@ blockviewer {
     D:color.blue=255.0
     D:color.green=255.0
     D:color.red=255.0
-    B:enabled=true
+    B:enabled=false
     B:invNames=false
     S:position.alignment=NORTH_WEST
     S:position.anchor=NORTH_WEST
@@ -456,10 +456,10 @@ itempickup {
 
 jumpbar {
     B:enabled=true
-    S:position.alignment=null
-    S:position.anchor=null
-    S:position.contentAlignment=null
-    S:position.direction=null
+    S:position.alignment=NORTH_WEST
+    S:position.anchor=NORTH_WEST
+    S:position.contentAlignment=NORTH
+    S:position.direction=NORTH_WEST
     B:position.lockAlignment=false
     B:position.lockContent=false
     S:position.origin=0, 0
@@ -574,10 +574,10 @@ saturation {
 
 scoreboard {
     B:enabled=true
-    S:position.alignment=null
-    S:position.anchor=null
-    S:position.contentAlignment=null
-    S:position.direction=null
+    S:position.alignment=NORTH_WEST
+    S:position.anchor=NORTH_WEST
+    S:position.contentAlignment=WEST
+    S:position.direction=NORTH_WEST
     B:position.lockAlignment=false
     B:position.lockContent=false
     S:position.origin=0, 0
