--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -126,10 +126,10 @@ effects {
     I:"Footprint Style"=6
 
     # Enable player footprints [default: true]
-    B:Footprints=true
+    B:Footprints=false
 
     # Display random power word on critical hit [default: true]
-    B:"Show Crit Words"=true
+    B:"Show Crit Words"=false
 
     # Show player breath in cold weather and underwater [default: true]
     B:"Show Frost Breath"=true
@@ -159,13 +159,13 @@ fog {
     B:"Desert Fog"=true
 
     # Higher the player elevation the more haze that is experienced [default: true]
-    B:"Elevation Haze"=true
+    B:"Elevation Haze"=false
 
     # Enable/disable fog processing [default: true]
     B:"Enable Fog Processing"=true
 
     # Show morning fog that eventually burns off [default: true]
-    B:"Morning Fog"=true
+    B:"Morning Fog"=false
 
     # Chance morning fog will occurs expressed as 1 in N (1 means always) [range: 1 ~ 10, default: 1]
     I:"Morning Fog Chance"=1
@@ -192,7 +192,6 @@ general {
     # Possible sounds to play when client finishes loading and reaches the main game menu [default: [minecraft:entity.experience_orb.pickup], [minecraft:entity.chicken.egg]]
     S:"Startup Sound List" <
         minecraft:entity.experience_orb.pickup
-        minecraft:entity.chicken.egg
      >
 }
 
@@ -226,13 +225,14 @@ logging {
 
 player {
     # Amount of food bar remaining to trigger player hunger sound (0 disable) [range: 0 ~ 10, default: 8]
-    I:"Hunger Threshold"=8
+    I:"Hunger Threshold"=6
 
     # Percentage of player health bar remaining to trigger player hurt sound (0 disable) [range: 0.0 ~ 0.5, default: 0.25]
     D:"Hurt Threshold"=0.25
 
     # Suppress rendering of player's potion particles [default: false]
-    B:"Suppress Potion Particles"=false
+    B:"Suppress Potion Particles"=true
+
 }
 
 
@@ -250,7 +250,7 @@ profiles {
     B:"No Dust Effects"=false
 
     # Disable weather effects in the Nether
-    B:"No Nether Weather"=false
+    B:"No Nether Weather"=true
 }
 
 
@@ -295,7 +295,7 @@ rain {
 
 sound {
     # Enable/disable armor sounds when moving [default: true]
-    B:"Armor Sound"=true
+    B:"Armor Sound"=false
 
     # Automatically configure sound channels [default: true]
     B:"Autoconfigure Channels"=true
@@ -310,7 +310,7 @@ sound {
     B:"Enable Biomes Sounds"=true
 
     # Enable Weapon/Tool Equip sound effect [default: true]
-    B:"Equip Sound"=true
+    B:"Equip Sound"=false
 
     # true to match first person arm swing; false to match 3rd person leg animation [default: true]
     B:"First Person Footstep Cadence"=true
@@ -341,25 +341,13 @@ sound {
 
     # Configure how each individual sound will be handled (block, cull, and volume scale) [default: [minecraft:block.water.ambient cull], [minecraft:block.lava.ambient cull], [minecraft:entity.sheep.ambient cull], [minecraft:entity.chicken.ambient cull], [minecraft:entity.cow.ambient cull], [minecraft:entity.pig.ambient cull], [dsurround:bison block], [dsurround:elephant block], [dsurround:gnatt block], [dsurround:insectbuzz block], [dsurround:hiss block], [dsurround:rattlesnake block]]
     S:"Sound Settings" <
-        minecraft:block.water.ambient cull
-        minecraft:block.lava.ambient cull
-        minecraft:entity.sheep.ambient cull
-        minecraft:entity.chicken.ambient cull
-        minecraft:entity.cow.ambient cull
-        minecraft:entity.pig.ambient cull
-        dsurround:bison block
-        dsurround:elephant block
-        dsurround:gnatt block
-        dsurround:insectbuzz block
-        dsurround:hiss block
-        dsurround:rattlesnake block
      >
 
     # Size of a stream buffer in kilobytes (0: system default - usually 128K bytes) [range: 0 ~ 2147483647, default: 32]
-    I:"Stream Buffer Size"=32
+    I:"Stream Buffer Size"=16
 
     # Enable/disable item swing sounds [default: true]
-    B:"Swing Sound"=true
+    B:"Swing Sound"=false
 
     # Enable Sword Equip sound as Tool [default: false]
     B:"Sword Equip as Tool"=false
@@ -377,7 +365,7 @@ sound {
 
 speechbubbles {
     # Enable/disable display of food/water badges over Animania mobs [default: true]
-    B:"Animania Badges"=true
+    B:"Animania Badges"=false
 
     # Number of seconds to display speech before removing [range: 5.0 ~ 15.0, default: 7.0]
     D:"Display Duration"=7.0
@@ -386,7 +374,7 @@ speechbubbles {
     B:"Enable Entity Chat"=false
 
     # Enables/disables speech bubbles above player heads (needs to be enabled server side as well) [default: false]
-    B:"Enable SpeechBubbles"=false
+    B:"Enable SpeechBubbles"=true
 
     # Range at which a SpeechBubble is visible (filtering occurs server side) [range: 1.4E-45 ~ 3.4028235E38, default: 16.0]
     D:"Visibility Range"=16.0
