Add resourcepack (need tweaks), add mods, config HUD
WailaHarvestability is not needed
Scaling Health needs config tweaks

--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 3.6.1.0
+~CONFIG_VERSION: 3.6.2.1
 
 ##########################################################################################################
 # asm
@@ -232,7 +232,6 @@ player {
 
     # Suppress rendering of player's potion particles [default: false]
     B:"Suppress Potion Particles"=true
-
 }
 
 
@@ -341,6 +340,19 @@ sound {
 
     # Configure how each individual sound will be handled (block, cull, and volume scale) [default: [minecraft:block.water.ambient cull], [minecraft:block.lava.ambient cull], [minecraft:entity.sheep.ambient cull], [minecraft:entity.chicken.ambient cull], [minecraft:entity.cow.ambient cull], [minecraft:entity.pig.ambient cull], [dsurround:bison block], [dsurround:elephant block], [dsurround:gnatt block], [dsurround:insectbuzz block], [dsurround:hiss block], [dsurround:rattlesnake block]]
     S:"Sound Settings" <
+        dsurround:bison cull
+        dsurround:crocodile cull
+        dsurround:crow cull
+        dsurround:elephant cull
+        dsurround:frog cull
+        dsurround:gnatt cull
+        dsurround:hiss cull
+        dsurround:insectbuzz cull
+        dsurround:insectcrawl cull
+        dsurround:monstergrowl cull
+        dsurround:rattlesnake cull
+        dsurround:seagulls cull
+        dsurround:whale cull
      >
 
     # Size of a stream buffer in kilobytes (0: system default - usually 128K bytes) [range: 0 ~ 2147483647, default: 32]
