--- a/config/RPG-HUD/settings.cfg
+++ b/config/RPG-HUD/settings.cfg
@@ -1,15 +1,15 @@
 Version=1.0
-H:hud_type=vanilla
+H:hud_type=modern
 B:enable_button_tooltip=true
 B:reduce_size=false
-B:show_armor=true
+B:show_armor=false
 B:show_arrow_count=true
-B:show_item_durability=true
+B:show_item_durability=false
 B:show_block_count=true
 B:show_durability_bar=true
 P:armor_det_position=0_0
-P:arrow_det_position=0_0
-P:item_det_position=0_0
+P:arrow_det_position=0_100
+P:item_det_position=0_100
 B:show_numbers_health=true
 B:health_percentage=false
 C:color_health=12648448
@@ -23,22 +23,22 @@ B:show_hunger_preview=true
 C:color_food=3916288
 C:color_hunger=10199143
 P:hunger_position=0_0
-B:show_numbers_experience=true
+B:show_numbers_experience=false
 B:experience_percentage=false
 C:color_experience=15658496
-P:experience_position=0_0
+P:experience_position=0_3
 B:mount_health_percentage=false
-B:enable_clock=true
+B:enable_clock=false
 B:enable_clock_color=true
 B:enable_immersive_clock=false
 S:clock_time_format=time.24
 P:clock_position=0_0
-B:enable_compass=true
+B:enable_compass=false
 B:enable_compass_color=true
 B:enable_immersive_compass=false
 B:enable_compass_coordinates=true
 B:invert_compass=false
-P:compass_position=0_0
+P:compass_position=150_0
 B:render_player_face=true
 P:widget_position=0_0
 P:face_position=0_0
@@ -47,17 +47,17 @@ C:color_jump_bar=9079434
 P:jump_bar_position=0_0
 B:enable_entity_inspect=true
 B:show_entity_armor=true
-P:inspector_position=0_0
+P:inspector_position=0_40
 C:color_air=23490
 P:air_position=0_0
-B:status_vertical=false
+B:status_vertical=true
 B:status_time=true
 P:pickup_position=0_0
 D:status_scale=1.0
 P:mount_health_position=0_0
-P:hotbar_position=0_0
+P:hotbar_position=0_3
 P:level_position=0_0
-P:armor_position=0_0
+P:armor_position=0_3
 B:render_vanilla_armor=false
 B:prevent_event_armor=false
 B:prevent_element_render_armor=false
