Remove trashslot, resource pack changes, quark config changes

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -4,7 +4,7 @@ _global {
     # Set this to false to disable stairs, slabs, and walls, mod-wide. As these blocks can use a lot of Block IDs,
     # this is helpful to reduce the load, if you intend on running a really large modpack.
     # Note: Blocks that require stairs and/or slabs for their recipes (such as Soul Sandstone or Midori) won't be affected.
-    B:"Allow Block Variants"=true
+    B:"Allow Block Variants"=false
 
     # Set this to false to remove the system that has features turn themselves off automatically when other mods are present that add similar features.
     # Note that you can force features to be enabled individually through their respective configs.
@@ -16,7 +16,7 @@ _global {
     # Another example can be /quarkconfig tweaks - "Shearable chickens" false
     # This disables shearable chickens for everybody on the server. "nosave" doesn't need to be included, as it's the default.
     # "nosave" does need to be there if a player name is used. Lastly, - signifies no subcategory inside the module.
-    B:"Enable Quark Config Command"=true
+    B:"Enable Quark Config Command"=false
 
     # Whether features that are based on the time of year should be enabled.
     # An example is chests turning to presents when it's Christmas.
@@ -25,7 +25,7 @@ _global {
 
     # Set this to false to disable the q button in the main and pause menus.
     # If you disable this, you can still access the quark config from Mod Options > Quark > Config
-    B:"Enable q Button"=true
+    B:"Enable q Button"=false
 
     # Note that if you turn off 'Use Piston Logic Replacement', this value will not apply.
     I:"Piston Push Limit"=12
