Add glowood to oredicts, adjust default config, misc

--- a/config/treechop.cfg
+++ b/config/treechop.cfg
@@ -4,7 +4,7 @@
 
 1-general {
     # Whether players can deactivate chopping e.g. by sneaking [default: true]
-    B:canChooseNotToChop=true
+    B:canChooseNotToChop=false
 
     # Whether this mod is enabled or not [default: true]
     B:enabled=true
