--- a/config/mobends.cfg
+++ b/config/mobends.cfg
@@ -1,6 +1,19 @@
 # Configuration file
 
+animated {
+    B:"mobends-minecraft:skeleton"=true
+    B:"mobends-minecraft:spider"=true
+    B:"mobends-minecraft:squid"=true
+    B:"mobends-minecraft:wolf"=true
+    B:"mobends-minecraft:zombie"=true
+    B:"mobends-minecraft:zombie_pigman"=true
+    B:mobends-player=true
+}
+
+
 general {
+    S:AppliedPacks <
+     >
     B:showArrowTrails=true
     B:showSwordTrail=true
     S:weaponItems <
