--- a/config/eyesinthedarkness.cfg
+++ b/config/eyesinthedarkness.cfg
@@ -4,7 +4,7 @@ general {
     # If the whitelist is not used, this list contains biomes excluded from the list of all biomes.
     S:BiomeBlacklist <
         minecraft:void
-        minecraft:the_nether
+        minecraft:hell
      >
 
     # If not empty, this list of biomes will be used instead of all biomes. The blacklist will not take effect.
