Add mods, remove randomthings

--- a/config/eyesinthedarkness.cfg
+++ b/config/eyesinthedarkness.cfg
@@ -3,7 +3,7 @@
 general {
     # If the whitelist is not used, this list contains biomes excluded from the list of all biomes.
     S:BiomeBlacklist <
-        minecraft:void
+        minecraft:sky
         minecraft:hell
      >
 
