--- a/config/mobends.cfg
+++ b/config/mobends.cfg
@@ -7,7 +7,7 @@ animated {
     B:"mobends-minecraft:wolf"=true
     B:"mobends-minecraft:zombie"=true
     B:"mobends-minecraft:zombie_pigman"=true
-    B:mobends-player=true
+    B:mobends-player=false
 }
 
 
