Add nethercraft zombies to EpicSiegeMod

--- a/config/epicsiegemod.cfg
+++ b/config/epicsiegemod.cfg
@@ -88,6 +88,8 @@ other {
 
     # List of mobs that can pillar up and build stairs [default: [minecraft:zombie]]
     S:"Building Mobs" <
+        nethercraft:bloody_zombie
+        nethercraft:dark_zombie
         minecraft:enderman
         minecraft:zombie_villager
         minecraft:zombie
@@ -116,6 +118,8 @@ other {
 
     # List of mobs that can dig through blocks [default: [minecraft:zombie]]
     S:"Digging Mobs" <
+        nethercraft:dark_zombie
+        nethercraft:bloody_zombie
         minecraft:zombie
         minecraft:zombie_villager
         minecraft:husk
