--- a/config/time_is_up.cfg
+++ b/config/time_is_up.cfg
@@ -18,13 +18,13 @@ configs {
      >
 
     # Tick when the timer becomes red. [default:620] [range: 0 ~ 2147483647, default: 620]
-    I:Dangerous=620
+    I:Dangerous=1200
 
     # Default amount of ticks recovered per tick recover. [default:1] [range: 1 ~ 2147483647, default: 1]
     I:"Default amount recovered"=1
 
     # Default duration when the player comes for the first time in this dimension. [default:12000 = 10 minutes] [range: 0 ~ 2147483647, default: 12000]
-    I:"Default duration"=12000
+    I:"Default duration"=72000
 
     # Default max duration that can be accumulated for a dimension. [default:72000 = 1 hour] [range: 0 ~ 2147483647, default: 72000]
     I:"Default max duration"=72000
@@ -39,7 +39,10 @@ configs {
      >
 
     # Tick when the timer comes in the front of the screen [default:220] [range: 0 ~ 2147483647, default: 220]
-    I:Emergency=220
+    I:Emergency=600
+
+    # Set to true to use the same shared timer for all dimensions [default: false]
+    B:"Global timer"=true
 
     # When time is up, the player die if set to false or receive bad potion effects if set to true [default: false]
     B:"Potion Effects"=true
@@ -47,7 +50,8 @@ configs {
     # Play a warning sound at these ticks. [default: [1220, 620] ]
     I:Warnings <
         1220
-        620
+        12000
+        36000
      >
 }
 
@@ -55,7 +59,7 @@ configs {
 effects {
     # Sets the spawn chance when doom performs its effect.
     # Assuming nothing else is preventing spawning. [range: 0.0 ~ 1.0, default: 0.6]
-    S:"Doom spawn chance"=0.6
+    S:"Doom spawn chance"=1.0
 
     # Sets mobs that can be spawned by doom effect.
     # If a dimension or biome is not set, default spawnset for biome will be used.
@@ -95,6 +99,7 @@ effects {
         minecraft:mining_fatigue;120;1;true
         minecraft:poison;120;2;true
         minecraft:hunger;120;1;true
+        timeisup:doom;999;10;true
      >
 }
 
