Remove ZombiePlayers, enable infectious zombies in ESM
ZombiePlayers is incompat with Mo Bends

--- a/config/epicsiegemod.cfg
+++ b/config/epicsiegemod.cfg
@@ -145,7 +145,7 @@ other {
      >
 
     # Dying to zombies will turn your corpse into one of them [default: true]
-    B:"Infectious Zombies"=false
+    B:"Infectious Zombies"=true
 
     # Use the digging blacklist as a whitelist instead [default: false]
     B:"Invert Digging Blacklist"=false
