Eyes in the Darkness in the Beneath only

--- a/config/eyesinthedarkness.cfg
+++ b/config/eyesinthedarkness.cfg
@@ -3,12 +3,11 @@
 general {
     # If the whitelist is not used, this list contains biomes excluded from the list of all biomes.
     S:BiomeBlacklist <
-        minecraft:sky
-        minecraft:hell
      >
 
     # If not empty, this list of biomes will be used instead of all biomes. The blacklist will not take effect.
     S:BiomeWhitelist <
+        beneath:the_beneath
      >
 
     # If false, the eyes entity will not spawn naturally during the night-
