Erebus ore changes

--- a/config/erebus.cfg
+++ b/config/erebus.cfg
@@ -43,24 +43,24 @@ general {
 
 
 ores {
-    B:"Generate aluminium"=false
+    B:"Generate aluminium"=true
     B:"Generate coal"=true
-    B:"Generate copper"=false
-    B:"Generate diamond"=true
-    B:"Generate diamond_encrusted"=true
-    B:"Generate emerald"=true
+    B:"Generate copper"=true
+    B:"Generate diamond"=false
+    B:"Generate diamond_encrusted"=false
+    B:"Generate emerald"=false
     B:"Generate fossil"=true
     B:"Generate gneiss"=true
-    B:"Generate gold"=true
-    B:"Generate iron"=true
+    B:"Generate gold"=false
+    B:"Generate iron"=false
     B:"Generate jade"=true
-    B:"Generate lapis"=true
-    B:"Generate lead"=false
+    B:"Generate lapis"=false
+    B:"Generate lead"=true
     B:"Generate petrified_wood"=true
     B:"Generate quartz"=true
     B:"Generate silver"=false
     B:"Generate temple"=true
-    B:"Generate tin"=false
+    B:"Generate tin"=true
 }
 
 
