Parasite config tweaks

--- a/config/SRParasites.cfg
+++ b/config/SRParasites.cfg
@@ -22,12 +22,11 @@ general {
 
     # Parasites can't spawn in these dimensions
     I:"Mobs Blacklisted Dimensions" <
-        -1
-        1
+        0
      >
 
     # Set to true if you want to use the list as a WhiteList. [default: false]
-    B:"Mobs Blacklisted Dimensions Inverted"=false
+    B:"Mobs Blacklisted Dimensions Inverted"=true
 
     # Set to false if you want to disable mobs. [default: true]
     B:"Mobs Enabled"=true
@@ -2794,7 +2793,7 @@ world_biome {
     I:"Maximum Node Number"=20
 
     # Minimum distance that one node needs to be away from the other to appear. [range: 0 ~ 100000000, default: 10000]
-    I:"Minimum Distance Between Nodes"=10000
+    I:"Minimum Distance Between Nodes"=1000
 
     # Minimum distance one node needs to be away from SpawnPoint to appear. [range: 0 ~ 100000000, default: 1]
     I:"Minimum Distance From SpawnPoint"=1
@@ -2868,7 +2867,7 @@ world_colony {
     B:"Colonies Activated"=true
 
     # Value of the base radius of a Colony. [range: 1 ~ 10000, default: 60]
-    I:"Colonies Base Radius Value"=60
+    I:"Colonies Base Radius Value"=300
 
     # Cap of points for a single Colony. [range: 1 ~ 10000, default: 100]
     I:"Colonies Points Cap"=100
@@ -2877,7 +2876,7 @@ world_colony {
     I:"Colonies Spread Point"=2
 
     # How much the radius will grow. [range: 1 ~ 10000, default: 20]
-    I:"Colonies Spread Value"=20
+    I:"Colonies Spread Value"=100
 
     # Message sent to all players in the current world when a Colony is placed [default: Colony]
     S:"Colonies Warning Message"=Colony
@@ -2907,15 +2906,14 @@ world_colony {
     S:"Colony Bonus KDR Value"=0.0
 
     # Maximum number of Colonies in a world. [range: 1 ~ 100, default: 20]
-    I:"Maximum Colony Number"=20
+    I:"Maximum Colony Number"=100
 
     # Minimum distance that one Colony needs to be away from the other to appear. [range: 0 ~ 100000000, default: 2000]
-    I:"Minimum Distance Between Colonies"=2000
+    I:"Minimum Distance Between Colonies"=100
 
     # Colonies can only be made in these dimensions
     I:"WhiteList Dimensions" <
         0
-        1
      >
 }
 
