Change OW time, DSurr config changes

--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -126,7 +126,7 @@ effects {
     I:"Footprint Style"=6
 
     # Enable player footprints [default: true]
-    B:Footprints=false
+    B:Footprints=true
 
     # Display random power word on critical hit [default: true]
     B:"Show Crit Words"=false
@@ -159,7 +159,7 @@ fog {
     B:"Desert Fog"=true
 
     # Higher the player elevation the more haze that is experienced [default: true]
-    B:"Elevation Haze"=false
+    B:"Elevation Haze"=true
 
     # Enable/disable fog processing [default: true]
     B:"Enable Fog Processing"=true
@@ -276,7 +276,7 @@ rain {
     D:"Rain Intensity for Background Thunder"=0.75
 
     # 0: original round, 1: darker round, 2: square, 3: pixelated [range: 0 ~ 3, default: 3]
-    I:"Style of rain water ripple"=3
+    I:"Style of rain water ripple"=2
 
     # Let Vanilla handle rain intensity and time windows [default: false]
     B:"Use Vanilla Algorithms"=false
@@ -309,7 +309,7 @@ sound {
     B:"Enable Biomes Sounds"=true
 
     # Enable Weapon/Tool Equip sound effect [default: true]
-    B:"Equip Sound"=false
+    B:"Equip Sound"=true
 
     # true to match first person arm swing; false to match 3rd person leg animation [default: true]
     B:"First Person Footstep Cadence"=true
