Add TREPIDATION resource pack, tweak GUI textures, add defaultoptions configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
-
+/options.txt
+/optionsof.txt
+/knownkeys.txt
 .curseclient
 /.mixin.out/
 /logs
 minecraftinstance.json
-options.txt
 realms_persistence.json
 /saves
 usercache.json
 usernamecache.json
 /screenshots
-knownkeys.txt
 mods/OptiFine_1.16.5_HD_U_G7.jar
 /crash-reports
-optionsof.txt
 optionsshaders.txt
 /shaderpacks
 /XaeroWaypoints
