--- a/config/waila/waila.cfg
+++ b/config/waila/waila.cfg
@@ -7,14 +7,14 @@ client {
 
 
 general {
-    I:waila.cfg.alpha=80
-    I:waila.cfg.bgcolor=-15728624
+    I:waila.cfg.alpha=64
+    I:waila.cfg.bgcolor=-15527149
     S:waila.cfg.blocknameformat=\u00A7f%s
     S:waila.cfg.entitynameformat=\u00A7f%s
     S:waila.cfg.fluidnameformat=\u00A7f%s
     I:waila.cfg.fontcolor=-6250336
-    I:waila.cfg.gradient1=-11534081
-    I:waila.cfg.gradient2=-14155649
+    I:waila.cfg.gradient1=-16777216
+    I:waila.cfg.gradient2=-703934
     I:waila.cfg.heartsperline=20
     B:waila.cfg.hidefromdebug=false
     B:waila.cfg.hidefromlist=true
@@ -27,7 +27,7 @@ general {
     B:waila.cfg.newfilters=true
     I:waila.cfg.posx=5000
     I:waila.cfg.posy=100
-    I:waila.cfg.scale=99
+    I:waila.cfg.scale=88
     B:waila.cfg.shiftblock=false
     B:waila.cfg.shiftents=false
     B:waila.cfg.show=true
